Amazon API v2 (I40).